Bindings/CEGUI/hBuild/include/ClassWindow.h

// 
void cegui_wnd_getRootWindow2(struct hg3dclass_struct * thisclass_c, struct hg3dclass_struct * result_c);
// Return whether the Window
void cegui_wnd_isNonClientWindow(struct hg3dclass_struct * thisclass_c, int * result_c);
// Renames the window. 
void cegui_wnd_rename(struct hg3dclass_struct * thisclass_c, char * new_name_c);
// Initialises the Window
void cegui_wnd_initialiseComponents(struct hg3dclass_struct * thisclass_c);
// Set whether or not this WindowWindow
void cegui_wnd_setDestroyedByParent(struct hg3dclass_struct * thisclass_c, int setting_c);
// Set whether this window is always on top, or not. 
void cegui_wnd_setAlwaysOnTop(struct hg3dclass_struct * thisclass_c, int setting_c);
// Set whether this window is enabled or disabled. A disabled window normally can not be interacted with, and may have different rendering. 
void cegui_wnd_setEnabled(struct hg3dclass_struct * thisclass_c, int setting_c);
// enable the Window
void cegui_wnd_enable(struct hg3dclass_struct * thisclass_c);
// disable the Window
void cegui_wnd_disable(struct hg3dclass_struct * thisclass_c);
// Set whether the Window
void cegui_wnd_setVisible(struct hg3dclass_struct * thisclass_c, int setting_c);
// show the Window
void cegui_wnd_show(struct hg3dclass_struct * thisclass_c);
// hide the Window
void cegui_wnd_hide(struct hg3dclass_struct * thisclass_c);
// Activate the WindowWindow
void cegui_wnd_activate(struct hg3dclass_struct * thisclass_c);
// Deactivate the window. No further inputs will be received by the window until it is re-activated either programmatically or by the user interacting with the gui. 
void cegui_wnd_deactivate(struct hg3dclass_struct * thisclass_c);
// Set whether this Window
void cegui_wnd_setClippedByParent(struct hg3dclass_struct * thisclass_c, int setting_c);
// Set the current ID for the Window
void cegui_wnd_setID(struct hg3dclass_struct * thisclass_c, unsigned int ID_c);
// Set the current text string for the Window
void cegui_wnd_setText(struct hg3dclass_struct * thisclass_c, char * text_c);
// Append the string textWindow
void cegui_wnd_appendText(struct hg3dclass_struct * thisclass_c, char * text_c);
// Set the font used by this Window
void cegui_wnd_setFont(struct hg3dclass_struct * thisclass_c, struct hg3dclass_struct * font_c);
// Set the font used by this Window
void cegui_wnd_setFont2(struct hg3dclass_struct * thisclass_c, char * name_c);
// Add the named WindowWindowWindownameWindowWindow
void cegui_wnd_addChildWindow(struct hg3dclass_struct * thisclass_c, char * name_c);
// Add the specified WindowWindowWindowwindowWindowWindow
void cegui_wnd_addChildWindow2(struct hg3dclass_struct * thisclass_c, struct hg3dclass_struct * window_c);
// Remove the named Window
void cegui_wnd_removeChildWindow(struct hg3dclass_struct * thisclass_c, char * name_c);
// Remove the specified Window
void cegui_wnd_removeChildWindow2(struct hg3dclass_struct * thisclass_c, struct hg3dclass_struct * window_c);
// Remove the first child WindowWindow
void cegui_wnd_removeChildWindow3(struct hg3dclass_struct * thisclass_c, unsigned int ID_c);
// Move the Window
void cegui_wnd_moveToFront(struct hg3dclass_struct * thisclass_c);
// Move the Window
void cegui_wnd_moveToBack(struct hg3dclass_struct * thisclass_c);
// Captures input to this window. 
void cegui_wnd_captureInput(struct hg3dclass_struct * thisclass_c, int * result_c);
// Releases input capture from this WindowWindow
void cegui_wnd_releaseInput(struct hg3dclass_struct * thisclass_c);
// Set whether this window will remember and restore the previous window that had inputs captured. 
void cegui_wnd_setRestoreCapture(struct hg3dclass_struct * thisclass_c, int setting_c);
// Set the current alpha value for this window. 
void cegui_wnd_setAlpha(struct hg3dclass_struct * thisclass_c, float alpha_c);
// Sets whether this Window
void cegui_wnd_setInheritsAlpha(struct hg3dclass_struct * thisclass_c, int setting_c);
// Invalidate this window causing at least this window to be redrawn during the next rendering pass. 
void cegui_wnd_invalidate(struct hg3dclass_struct * thisclass_c);
// Invalidate this window and - dependant upon recursive
void cegui_wnd_invalidate2(struct hg3dclass_struct * thisclass_c, const int recursive_c);
// Set the mouse cursor image to be used when the mouse enters this window. 
void cegui_wnd_setMouseCursor3(struct hg3dclass_struct * thisclass_c, char * imageset_c, char * image_name_c);
// Set whether z-order changes are enabled or disabled for this Window
void cegui_wnd_setZOrderingEnabled(struct hg3dclass_struct * thisclass_c, int setting_c);
// Set whether this window will receive multi-click events or multiple 'down' events instead. 
void cegui_wnd_setWantsMultiClickEvents(struct hg3dclass_struct * thisclass_c, int setting_c);
// Set whether mouse button down event autorepeat is enabled for this window. 
void cegui_wnd_setMouseAutoRepeatEnabled(struct hg3dclass_struct * thisclass_c, int setting_c);
// Set the current auto-repeat delay setting for this window. 
void cegui_wnd_setAutoRepeatDelay(struct hg3dclass_struct * thisclass_c, float delay_c);
// Set the current auto-repeat rate setting for this window. 
void cegui_wnd_setAutoRepeatRate(struct hg3dclass_struct * thisclass_c, float rate_c);
// Set whether the window wants inputs passed to its attached child windows when the window has inputs captured. 
void cegui_wnd_setDistributesCapturedInputs(struct hg3dclass_struct * thisclass_c, int setting_c);
// Internal support method for drag & drop. You do not normally call this directly from client code. See the DragContainer
void cegui_wnd_notifyDragDropItemEnters(struct hg3dclass_struct * thisclass_c, struct hg3dclass_struct * item_c);
// Internal support method for drag & drop. You do not normally call this directly from client code. See the DragContainer
void cegui_wnd_notifyDragDropItemLeaves(struct hg3dclass_struct * thisclass_c, struct hg3dclass_struct * item_c);
// Internal support method for drag & drop. You do not normally call this directly from client code. See the DragContainer
void cegui_wnd_notifyDragDropItemDropped(struct hg3dclass_struct * thisclass_c, struct hg3dclass_struct * item_c);
// Internal destroy method which actually just adds the window and any parent destructed child windows to the dead pool. 
void cegui_wnd_destroy(struct hg3dclass_struct * thisclass_c);
// Set the custom TooltipWindowWindowTooltip
void cegui_wnd_setTooltip(struct hg3dclass_struct * thisclass_c, struct hg3dclass_struct * tooltip_c);
// Set the custom TooltipWindowWindow
void cegui_wnd_setTooltipType(struct hg3dclass_struct * thisclass_c, char * tooltipType_c);
// Set the tooltip text for this window. 
void cegui_wnd_setTooltipText(struct hg3dclass_struct * thisclass_c, char * tip_c);
// Set whether this window inherits Tooltip
void cegui_wnd_setInheritsTooltipText(struct hg3dclass_struct * thisclass_c, int setting_c);
// Set whether this window will rise to the top of the z-order when clicked with the left mouse button. 
void cegui_wnd_setRiseOnClickEnabled(struct hg3dclass_struct * thisclass_c, int setting_c);
// Set the vertical alignment. 
void cegui_wnd_setVerticalAlignment(struct hg3dclass_struct * thisclass_c, const enum EnumVerticalAlignment alignment_c);
// Set the horizontal alignment. 
void cegui_wnd_setHorizontalAlignment(struct hg3dclass_struct * thisclass_c, const enum EnumHorizontalAlignment alignment_c);
// Set the LookNFeel that shoule be used for this window. 
void cegui_wnd_setLookNFeel(struct hg3dclass_struct * thisclass_c, char * look_c);
// Set the modal state for this Window
void cegui_wnd_setModalState(struct hg3dclass_struct * thisclass_c, int state_c);
// method called to perform extended laying out of attached child windows. 
void cegui_wnd_performChildWindowLayout(struct hg3dclass_struct * thisclass_c);
// Sets the value a named user string, creating it as required. 
void cegui_wnd_setUserString(struct hg3dclass_struct * thisclass_c, char * name_c, char * value_c);
// Set the window area. 
void cegui_wnd_setArea(struct hg3dclass_struct * thisclass_c, struct hg3dclass_struct * xpos_c, struct hg3dclass_struct * ypos_c, struct hg3dclass_struct * width_c, struct hg3dclass_struct * height_c);
// Set the window area. 
void cegui_wnd_setArea2(struct hg3dclass_struct * thisclass_c, struct hg3dclass_struct * pos_c, struct hg3dclass_struct * size_c);
// Set the window's position. 
void cegui_wnd_setPosition(struct hg3dclass_struct * thisclass_c, struct hg3dclass_struct * pos_c);
// Set the window's X position. 
void cegui_wnd_setXPosition(struct hg3dclass_struct * thisclass_c, struct hg3dclass_struct * x_c);
// Set the window's Y position. 
void cegui_wnd_setYPosition(struct hg3dclass_struct * thisclass_c, struct hg3dclass_struct * y_c);
// Set the window's size. 
void cegui_wnd_setSize(struct hg3dclass_struct * thisclass_c, struct hg3dclass_struct * size_c);
// Set the window's width. 
void cegui_wnd_setWidth(struct hg3dclass_struct * thisclass_c, struct hg3dclass_struct * width_c);
// Set the window's height. 
void cegui_wnd_setHeight(struct hg3dclass_struct * thisclass_c, struct hg3dclass_struct * height_c);
// Set the window's maximum size. 
void cegui_wnd_setMaxSize(struct hg3dclass_struct * thisclass_c, struct hg3dclass_struct * size_c);
// Set the window's minimum size. 
void cegui_wnd_setMinSize(struct hg3dclass_struct * thisclass_c, struct hg3dclass_struct * size_c);
// Get the window's position. 
void cegui_wnd_getPosition(struct hg3dclass_struct * thisclass_c, struct hg3dclass_struct * result_c);
// Get the window's X position. 
void cegui_wnd_getXPosition(struct hg3dclass_struct * thisclass_c, struct hg3dclass_struct * result_c);
// Get the window's Y position. 
void cegui_wnd_getYPosition(struct hg3dclass_struct * thisclass_c, struct hg3dclass_struct * result_c);
// Get the window's maximum size. 
void cegui_wnd_getMaxSize(struct hg3dclass_struct * thisclass_c, struct hg3dclass_struct * result_c);
// Get the window's minimum size. 
void cegui_wnd_getMinSize(struct hg3dclass_struct * thisclass_c, struct hg3dclass_struct * result_c);
// Causes the Window
void cegui_wnd_render(struct hg3dclass_struct * thisclass_c);
// Cause window to update itself and any attached children. Client code does not need to call this method; to ensure full, and proper updates, call the injectTimePulse methodname method provided by the System
void cegui_wnd_update(struct hg3dclass_struct * thisclass_c, float elapsed_c);
// Sets the internal 'initialising' flag to true. This can be use to optimize initialisation of some widgets, and is called automatically by the layout XML handler when it has created a window. That is just after the window has been created, but before any children or properties are read. 
void cegui_wnd_beginInitialisation(struct hg3dclass_struct * thisclass_c);
// Sets the internal 'initialising' flag to false. This is called automatically by the layout XML handler when it is done creating a window. That is after all properties and children have been loaded and just before the next sibling gets created. 
void cegui_wnd_endInitialisation(struct hg3dclass_struct * thisclass_c);
// Sets whether this window should ignore mouse events and pass them through to any windows behind it. In effect making the window transparent to the mouse. 
void cegui_wnd_setMousePassThroughEnabled(struct hg3dclass_struct * thisclass_c, int setting_c);
// Assign the WindowRenderer to specify the Look'N'Feel specification to be used. 
void cegui_wnd_setWindowRenderer(struct hg3dclass_struct * thisclass_c, char * name_c);
// Get the factory name of the currently assigned WindowRenderer. (Look'N'Feel specification). 
void cegui_wnd_getWindowRendererName(struct hg3dclass_struct * thisclass_c, char * result_c);
// Sets whether this window is allowed to write XML. 
void cegui_wnd_setWritingXMLAllowed(struct hg3dclass_struct * thisclass_c, int allow_c);
// Inform the window, and optionally all children, that screen area rectangles have changed. 
void cegui_wnd_notifyScreenAreaChanged(struct hg3dclass_struct * thisclass_c, int recursive_c);
// Changes the widget's falagard type, thus changing its look'n'feel and optionally its renderer in the process. 
void cegui_wnd_setFalagardType(struct hg3dclass_struct * thisclass_c, char * type_c, char * rendererType_c);