Bindings/CEGUI/hBuild/HGamer3D/Bindings/CEGUI/ClassWindow.chs


{- function getRootWindow2 -}
{#fun cegui_wnd_getRootWindow2 as getRootWindow2 
{ withHG3DClass* `HG3DClass' ,
 alloca- `HG3DClass' peek*} -> `()'  #}

{- function isNonClientWindow -}
{#fun cegui_wnd_isNonClientWindow as isNonClientWindow 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function rename -}
{#fun cegui_wnd_rename as rename 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' } -> `()'  #}

{- function initialiseComponents -}
{#fun cegui_wnd_initialiseComponents as initialiseComponents 
{ withHG3DClass* `HG3DClass' } -> `()'  #}

{- function setDestroyedByParent -}
{#fun cegui_wnd_setDestroyedByParent as setDestroyedByParent 
{ withHG3DClass* `HG3DClass' ,
 fromBool `Bool' } -> `()'  #}

{- function setAlwaysOnTop -}
{#fun cegui_wnd_setAlwaysOnTop as setAlwaysOnTop 
{ withHG3DClass* `HG3DClass' ,
 fromBool `Bool' } -> `()'  #}

{- function setEnabled -}
{#fun cegui_wnd_setEnabled as setEnabled 
{ withHG3DClass* `HG3DClass' ,
 fromBool `Bool' } -> `()'  #}

{- function enable -}
{#fun cegui_wnd_enable as enable 
{ withHG3DClass* `HG3DClass' } -> `()'  #}

{- function disable -}
{#fun cegui_wnd_disable as disable 
{ withHG3DClass* `HG3DClass' } -> `()'  #}

{- function setVisible -}
{#fun cegui_wnd_setVisible as setVisible 
{ withHG3DClass* `HG3DClass' ,
 fromBool `Bool' } -> `()'  #}

{- function show -}
{#fun cegui_wnd_show as show 
{ withHG3DClass* `HG3DClass' } -> `()'  #}

{- function hide -}
{#fun cegui_wnd_hide as hide 
{ withHG3DClass* `HG3DClass' } -> `()'  #}

{- function activate -}
{#fun cegui_wnd_activate as activate 
{ withHG3DClass* `HG3DClass' } -> `()'  #}

{- function deactivate -}
{#fun cegui_wnd_deactivate as deactivate 
{ withHG3DClass* `HG3DClass' } -> `()'  #}

{- function setClippedByParent -}
{#fun cegui_wnd_setClippedByParent as setClippedByParent 
{ withHG3DClass* `HG3DClass' ,
 fromBool `Bool' } -> `()'  #}

{- function setID -}
{#fun cegui_wnd_setID as setID 
{ withHG3DClass* `HG3DClass' ,
 fromIntegral `Int' } -> `()'  #}

{- function setText -}
{#fun cegui_wnd_setText as setText 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' } -> `()'  #}

{- function appendText -}
{#fun cegui_wnd_appendText as appendText 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' } -> `()'  #}

{- function setFont -}
{#fun cegui_wnd_setFont as setFont 
{ withHG3DClass* `HG3DClass' ,
 withHG3DClass* `HG3DClass' } -> `()'  #}

{- function setFont2 -}
{#fun cegui_wnd_setFont2 as setFont2 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' } -> `()'  #}

{- function addChildWindow -}
{#fun cegui_wnd_addChildWindow as addChildWindow 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' } -> `()'  #}

{- function addChildWindow2 -}
{#fun cegui_wnd_addChildWindow2 as addChildWindow2 
{ withHG3DClass* `HG3DClass' ,
 withHG3DClass* `HG3DClass' } -> `()'  #}

{- function removeChildWindow -}
{#fun cegui_wnd_removeChildWindow as removeChildWindow 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' } -> `()'  #}

{- function removeChildWindow2 -}
{#fun cegui_wnd_removeChildWindow2 as removeChildWindow2 
{ withHG3DClass* `HG3DClass' ,
 withHG3DClass* `HG3DClass' } -> `()'  #}

{- function removeChildWindow3 -}
{#fun cegui_wnd_removeChildWindow3 as removeChildWindow3 
{ withHG3DClass* `HG3DClass' ,
 fromIntegral `Int' } -> `()'  #}

{- function moveToFront -}
{#fun cegui_wnd_moveToFront as moveToFront 
{ withHG3DClass* `HG3DClass' } -> `()'  #}

{- function moveToBack -}
{#fun cegui_wnd_moveToBack as moveToBack 
{ withHG3DClass* `HG3DClass' } -> `()'  #}

{- function captureInput -}
{#fun cegui_wnd_captureInput as captureInput 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function releaseInput -}
{#fun cegui_wnd_releaseInput as releaseInput 
{ withHG3DClass* `HG3DClass' } -> `()'  #}

{- function setRestoreCapture -}
{#fun cegui_wnd_setRestoreCapture as setRestoreCapture 
{ withHG3DClass* `HG3DClass' ,
 fromBool `Bool' } -> `()'  #}

{- function setAlpha -}
{#fun cegui_wnd_setAlpha as setAlpha 
{ withHG3DClass* `HG3DClass' ,
 realToFrac `Float' } -> `()'  #}

{- function setInheritsAlpha -}
{#fun cegui_wnd_setInheritsAlpha as setInheritsAlpha 
{ withHG3DClass* `HG3DClass' ,
 fromBool `Bool' } -> `()'  #}

{- function invalidate -}
{#fun cegui_wnd_invalidate as invalidate 
{ withHG3DClass* `HG3DClass' } -> `()'  #}

{- function invalidate2 -}
{#fun cegui_wnd_invalidate2 as invalidate2 
{ withHG3DClass* `HG3DClass' ,
 fromBool `Bool' } -> `()'  #}

{- function setMouseCursor3 -}
{#fun cegui_wnd_setMouseCursor3 as setMouseCursor3 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' ,
 withCString* `String' } -> `()'  #}

{- function setZOrderingEnabled -}
{#fun cegui_wnd_setZOrderingEnabled as setZOrderingEnabled 
{ withHG3DClass* `HG3DClass' ,
 fromBool `Bool' } -> `()'  #}

{- function setWantsMultiClickEvents -}
{#fun cegui_wnd_setWantsMultiClickEvents as setWantsMultiClickEvents 
{ withHG3DClass* `HG3DClass' ,
 fromBool `Bool' } -> `()'  #}

{- function setMouseAutoRepeatEnabled -}
{#fun cegui_wnd_setMouseAutoRepeatEnabled as setMouseAutoRepeatEnabled 
{ withHG3DClass* `HG3DClass' ,
 fromBool `Bool' } -> `()'  #}

{- function setAutoRepeatDelay -}
{#fun cegui_wnd_setAutoRepeatDelay as setAutoRepeatDelay 
{ withHG3DClass* `HG3DClass' ,
 realToFrac `Float' } -> `()'  #}

{- function setAutoRepeatRate -}
{#fun cegui_wnd_setAutoRepeatRate as setAutoRepeatRate 
{ withHG3DClass* `HG3DClass' ,
 realToFrac `Float' } -> `()'  #}

{- function setDistributesCapturedInputs -}
{#fun cegui_wnd_setDistributesCapturedInputs as setDistributesCapturedInputs 
{ withHG3DClass* `HG3DClass' ,
 fromBool `Bool' } -> `()'  #}

{- function notifyDragDropItemEnters -}
{#fun cegui_wnd_notifyDragDropItemEnters as notifyDragDropItemEnters 
{ withHG3DClass* `HG3DClass' ,
 withHG3DClass* `HG3DClass' } -> `()'  #}

{- function notifyDragDropItemLeaves -}
{#fun cegui_wnd_notifyDragDropItemLeaves as notifyDragDropItemLeaves 
{ withHG3DClass* `HG3DClass' ,
 withHG3DClass* `HG3DClass' } -> `()'  #}

{- function notifyDragDropItemDropped -}
{#fun cegui_wnd_notifyDragDropItemDropped as notifyDragDropItemDropped 
{ withHG3DClass* `HG3DClass' ,
 withHG3DClass* `HG3DClass' } -> `()'  #}

{- function destroy -}
{#fun cegui_wnd_destroy as destroy 
{ withHG3DClass* `HG3DClass' } -> `()'  #}

{- function setTooltip -}
{#fun cegui_wnd_setTooltip as setTooltip 
{ withHG3DClass* `HG3DClass' ,
 withHG3DClass* `HG3DClass' } -> `()'  #}

{- function setTooltipType -}
{#fun cegui_wnd_setTooltipType as setTooltipType 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' } -> `()'  #}

{- function setTooltipText -}
{#fun cegui_wnd_setTooltipText as setTooltipText 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' } -> `()'  #}

{- function setInheritsTooltipText -}
{#fun cegui_wnd_setInheritsTooltipText as setInheritsTooltipText 
{ withHG3DClass* `HG3DClass' ,
 fromBool `Bool' } -> `()'  #}

{- function setRiseOnClickEnabled -}
{#fun cegui_wnd_setRiseOnClickEnabled as setRiseOnClickEnabled 
{ withHG3DClass* `HG3DClass' ,
 fromBool `Bool' } -> `()'  #}

{- function setVerticalAlignment -}
{#fun cegui_wnd_setVerticalAlignment as setVerticalAlignment 
{ withHG3DClass* `HG3DClass' ,
 cIntFromEnum `EnumVerticalAlignment' } -> `()'  #}

{- function setHorizontalAlignment -}
{#fun cegui_wnd_setHorizontalAlignment as setHorizontalAlignment 
{ withHG3DClass* `HG3DClass' ,
 cIntFromEnum `EnumHorizontalAlignment' } -> `()'  #}

{- function setLookNFeel -}
{#fun cegui_wnd_setLookNFeel as setLookNFeel 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' } -> `()'  #}

{- function setModalState -}
{#fun cegui_wnd_setModalState as setModalState 
{ withHG3DClass* `HG3DClass' ,
 fromBool `Bool' } -> `()'  #}

{- function performChildWindowLayout -}
{#fun cegui_wnd_performChildWindowLayout as performChildWindowLayout 
{ withHG3DClass* `HG3DClass' } -> `()'  #}

{- function setUserString -}
{#fun cegui_wnd_setUserString as setUserString 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' ,
 withCString* `String' } -> `()'  #}

{- function setArea -}
{#fun cegui_wnd_setArea as setArea 
{ withHG3DClass* `HG3DClass' ,
 withHG3DClass* `HG3DClass' ,
 withHG3DClass* `HG3DClass' ,
 withHG3DClass* `HG3DClass' ,
 withHG3DClass* `HG3DClass' } -> `()'  #}

{- function setArea2 -}
{#fun cegui_wnd_setArea2 as setArea2 
{ withHG3DClass* `HG3DClass' ,
 withHG3DClass* `HG3DClass' ,
 withHG3DClass* `HG3DClass' } -> `()'  #}

{- function setPosition -}
{#fun cegui_wnd_setPosition as setPosition 
{ withHG3DClass* `HG3DClass' ,
 withHG3DClass* `HG3DClass' } -> `()'  #}

{- function setXPosition -}
{#fun cegui_wnd_setXPosition as setXPosition 
{ withHG3DClass* `HG3DClass' ,
 withHG3DClass* `HG3DClass' } -> `()'  #}

{- function setYPosition -}
{#fun cegui_wnd_setYPosition as setYPosition 
{ withHG3DClass* `HG3DClass' ,
 withHG3DClass* `HG3DClass' } -> `()'  #}

{- function setSize -}
{#fun cegui_wnd_setSize as setSize 
{ withHG3DClass* `HG3DClass' ,
 withHG3DClass* `HG3DClass' } -> `()'  #}

{- function setWidth -}
{#fun cegui_wnd_setWidth as setWidth 
{ withHG3DClass* `HG3DClass' ,
 withHG3DClass* `HG3DClass' } -> `()'  #}

{- function setHeight -}
{#fun cegui_wnd_setHeight as setHeight 
{ withHG3DClass* `HG3DClass' ,
 withHG3DClass* `HG3DClass' } -> `()'  #}

{- function setMaxSize -}
{#fun cegui_wnd_setMaxSize as setMaxSize 
{ withHG3DClass* `HG3DClass' ,
 withHG3DClass* `HG3DClass' } -> `()'  #}

{- function setMinSize -}
{#fun cegui_wnd_setMinSize as setMinSize 
{ withHG3DClass* `HG3DClass' ,
 withHG3DClass* `HG3DClass' } -> `()'  #}

{- function getPosition -}
{#fun cegui_wnd_getPosition as getPosition 
{ withHG3DClass* `HG3DClass' ,
 alloca- `HG3DClass' peek*} -> `()'  #}

{- function getXPosition -}
{#fun cegui_wnd_getXPosition as getXPosition 
{ withHG3DClass* `HG3DClass' ,
 alloca- `HG3DClass' peek*} -> `()'  #}

{- function getYPosition -}
{#fun cegui_wnd_getYPosition as getYPosition 
{ withHG3DClass* `HG3DClass' ,
 alloca- `HG3DClass' peek*} -> `()'  #}

{- function getMaxSize -}
{#fun cegui_wnd_getMaxSize as getMaxSize 
{ withHG3DClass* `HG3DClass' ,
 alloca- `HG3DClass' peek*} -> `()'  #}

{- function getMinSize -}
{#fun cegui_wnd_getMinSize as getMinSize 
{ withHG3DClass* `HG3DClass' ,
 alloca- `HG3DClass' peek*} -> `()'  #}

{- function render -}
{#fun cegui_wnd_render as render 
{ withHG3DClass* `HG3DClass' } -> `()'  #}

{- function update -}
{#fun cegui_wnd_update as update 
{ withHG3DClass* `HG3DClass' ,
 realToFrac `Float' } -> `()'  #}

{- function beginInitialisation -}
{#fun cegui_wnd_beginInitialisation as beginInitialisation 
{ withHG3DClass* `HG3DClass' } -> `()'  #}

{- function endInitialisation -}
{#fun cegui_wnd_endInitialisation as endInitialisation 
{ withHG3DClass* `HG3DClass' } -> `()'  #}

{- function setMousePassThroughEnabled -}
{#fun cegui_wnd_setMousePassThroughEnabled as setMousePassThroughEnabled 
{ withHG3DClass* `HG3DClass' ,
 fromBool `Bool' } -> `()'  #}

{- function setWindowRenderer -}
{#fun cegui_wnd_setWindowRenderer as setWindowRenderer 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' } -> `()'  #}

{- function getWindowRendererName -}
{#fun cegui_wnd_getWindowRendererName as getWindowRendererName 
{ withHG3DClass* `HG3DClass' ,
 alloc64k- `String' peekCString*} -> `()'  #}

{- function setWritingXMLAllowed -}
{#fun cegui_wnd_setWritingXMLAllowed as setWritingXMLAllowed 
{ withHG3DClass* `HG3DClass' ,
 fromBool `Bool' } -> `()'  #}

{- function notifyScreenAreaChanged -}
{#fun cegui_wnd_notifyScreenAreaChanged as notifyScreenAreaChanged 
{ withHG3DClass* `HG3DClass' ,
 fromBool `Bool' } -> `()'  #}

{- function setFalagardType -}
{#fun cegui_wnd_setFalagardType as setFalagardType 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' ,
 withCString* `String' } -> `()'  #}
